--- a/src/main/webapp/resources/css/stylesheet.css
+++ b/src/main/webapp/resources/css/stylesheet.css
@@ -1,6 +1,8 @@
 html, body {
 	height: 100%;
 	font-family: "Times New Roman", Times, serif;
+	margin:0px;
+	padding:0px;
 }
 
 .tb-full-size{
@@ -10,6 +12,12 @@ html, body {
 
 .full-height{
 	height: 100%;
+}
+
+.full-size{
+	height:100%;
+	width:100%;
+	padding:5px;
 }
 
 .header{
@@ -47,37 +55,16 @@ html, body {
 	height: 100%;
 }
 
-.common-button{
-	cursor: pointer;
-	color: #3366ff;
-}
-
 #style-2 {
-  position:absolute;
+	position:absolute;
   border:1px solid black;
   height: 100%;
   width: 100%;
-  overflow-y:auto;
   min-height:0px;
+  overflow-y:auto;
 }
 
-#style-2::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
-}
-
-#style-2::-webkit-scrollbar {
-	width: 12px;
-	background-color: #F5F5F5;
-}
-
-#style-2::-webkit-scrollbar-thumb {
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-	background-color: #D62929;
-}
-
-#style-2::-webkit-scrollbar-thumb:hover {
-	background-color: #b30000;
+.common-button{
+	cursor: pointer;
+	color: #3366ff;
 }
